Updates to ACE & Californium code. Fix config on group apps AS.
Previous functionality now works. What needs to be added is the GM
admin related code.