@@ -22,13 +22,13 @@ echo "Californium CoAP Benchmark"
 echo
 echo "Requires a cf-extplugtest-server for exchanging messages."
 echo
-echo "Please check the available RAM (e.g.: on linux use \"free -m\") and"
-echo "adjust the \"-Xmx6g\" argument in \"CF_OPT\" to about 50% of the available RAM."
-echo "For newer JVMs the \"-XX:MaxRAMPercentage=50\" argument in \"CF_OPT\" may be used instead."
+echo "Please check the available RAM (e.g.: on linux use \"free -m\") it should be at least 8GB."
+echo "adjust the \"-Xmx6g\" argument in \"CF_OPT\" to about 75% of the available RAM."
+echo "For newer JVMs the \"-XX:MaxRAMPercentage=75\" argument in \"CF_OPT\" may be used instead."
 echo
 echo "The required server may be started using:"
-echo "java -Xmx6g -XX:+UseG1GC -jar cf-extplugtest-server-3.0.0.jar --no-external --no-plugtest"
-echo "Adjust the \"-Xmx6g\" argument also to about 50% of the available RAM."
+echo "java -Xmx6g -XX:+UseG1GC -jar cf-extplugtest-server-4.0.0-M2.jar --no-external --no-plugtest"
+echo "Adjust the \"-Xmx6g\" argument also to about 75% of the available RAM."
 echo "For newer JVMs the \"-XX:MaxRAMPercentage=50\" argument in \"CF_OPT\" may also be used instead."
 echo "If the benchmark is mainly used with the loopback interface (localhost), use the --no-external as above."
 echo "To use client and server on different hosts, provide --no-loopback instead."
@@ -42,7 +42,7 @@ echo "   in \"CaliforniumReceivetest.properties\" or set"
 echo "   DEDUPLICATOR to NO_DEDUPLICATOR there."
 echo
 echo "you have a too fast CPU for the available amount of RAM :-)."
-echo "Try to adjust the \"-Xmx\" to a larger value than the 50%."
+echo "Try to adjust the \"-Xmx\" to a larger value than the 75%."
 echo
 echo "Depending on your OS and configuration, the maximum number of sockets or threads may be limited."
 echo
@@ -52,13 +52,17 @@ echo "number of \"numproc\". That is mostly enough for servers, but for the benc
 echo "currently the number of clients to less than the half of the value of \"numproc\"."
 echo
 echo "For real (or virtual) machines with linux, the maximum number may be increased, if the host has"
-echo "enough resources (RAM and CPU) to execute it. On Ubuntu 18.04, please adjust the values"
+echo "enough resources (RAM and CPU) to execute it. On Ubuntu 20.04, please adjust the values"
 echo "\"DefaultLimitNOFILE\" in \"/etc/systemd/user.conf\" and \"/etc/systemd/system.conf\" accordingly"
 echo "to the number of wanted sockets, and uncomment it by removing the leading \"#\"."
 echo "For plain coap, currently more threads are required. Adjust \"UserTasksMax\" in"
 echo "\"/etc/systemd/logind.conf\" to twice the number of sockets plus 500 more. With that, up to 10000"
-echo "clients my be used for the benchmark. It's not recommended to use that many clients from one process"
-echo "and it's even less recommended to use more than that!"
+echo "emulated clients my be used for the benchmark. It's not recommended to use that many clients from"
+echo " one process and it's even less recommended to use more clients than that!"
+echo
+echo "Using java 21 or newer at runtime enables to use virtual threads. Only with that, 30000"
+echo "emulated clients may be used, if enough RAM is available and the CPU is fast enough to"
+echo "execute 30000 emulated clients. If the CPU is to slow, that may cause client to starve."
 echo
 echo "Variables:"
 echo "   USE_TCP, USE_UDP, USE_PLAIN, USE_SECURE, USE_CON, USE_NON"
@@ -84,13 +88,13 @@ echo
 # cat /proc/sys/vm/max_map_count
 # prlimit
 
-CF_JAR=cf-extplugtest-client-3.0.0.jar
-CF_JAR_FIND='cf-extplugtest-client-*.jar'
+CF_JAR=cf-extplugtest-client-4.0.0.jar
+CF_JAR_FIND="cf-extplugtest-client-*.jar"
 CF_EXEC="org.eclipse.californium.extplugtests.BenchmarkClient"
 #CF_OPT="-XX:+UseG1GC -Xmx6g -Xverify:none"
-CF_OPT="-XX:MaxRAMPercentage=50"
+CF_OPT="-XX:+UseZGC -Xmx10g"
 
-export CALIFORNIUM_STATISTIC="3.0.0"
+export CALIFORNIUM_STATISTIC="4.0.0"
 
 if [ -z "$1" ]  ; then
      CF_HOST=localhost
@@ -115,35 +119,41 @@ fi
 
 : "${PLAIN_PORT:=5783}"
 : "${SECURE_PORT:=5784}"
+: "${RESOURCE_PATH:=benchmark}"
 
-# adjust the multiplier according the speed of your CPU
+# 0 := disable, 1 := enable
 : "${USE_TCP:=1}"
 : "${USE_UDP:=1}"
 : "${USE_PLAIN:=1}"
 : "${USE_SECURE:=1}"
-: "${USE_CON:=2}"                         # 0:= not used, 1 := used, 2 := also with separate response  
+: "${USE_CON:=3}"                         # 0:= not used, 1 := used with piggybacked response, 2 := with separate response, 3 := both variants  
 : "${USE_NON:=1}"
 : "${USE_LARGE_BLOCK1:=1}"
 
 : "${USE_REQUEST:=1}"
-: "${USE_REVERSE:=1}"
 : "${USE_OBSERVE:=1}"
+: "${USE_REVERSE:=1}"
+: "${USE_REVERSE_OBSERVE:=1}"
 : "${USE_HANDSHAKES:=1}"
 : "${USE_PROXY:=0}"
 : "${USE_HTTP:=0}"
 
 : "${USE_NONESTOP:=--no-stop}"
+# may be "misused" for other arguments, e.g. "--no-stop --handshakes-full=5" for full handshakes after 5 requests.
 
 : "${USE_NSTART:=--nstart 1}"
 
 # export EXECUTER_REMOVE_ON_CANCEL=true
 # export EXECUTER_LOGGING_QUEUE_SIZE_DIFF=1000
 
+# adjust the multiplier according the speed of your CPU
+
 MULTIPLIER=10
 : "${REQS:=$((1000 * $MULTIPLIER))}"
 REQS_EXTRA=$(($REQS + ($REQS/10)))
 REV_REQS=$((2 * $REQS))
-: "${NOTIFIES:=$((1000 * $MULTIPLIER))}"
+: "${NOTIFIES:=$((350 * $MULTIPLIER))}"
+: "${REV_NOTIFIES:=$NOTIFIES}"
 
 : "${PAYLOAD:=40}"
 : "${PAYLOAD_MEDIUM:=400}"
@@ -151,12 +161,13 @@ REV_REQS=$((2 * $REQS))
 : "${REQS_LARGE:=$(($PAYLOAD * $REQS / $PAYLOAD_LARGE))}"
 
 : "${UDP_CLIENTS:=$((200 * $CLIENTS_MULTIPLIER))}"
-: "${TCP_CLIENTS:=$((50 * $CLIENTS_MULTIPLIER))}"
-: "${OBS_CLIENTS:=$((50 * $CLIENTS_MULTIPLIER))}"
+: "${TCP_CLIENTS:=$((100 * $CLIENTS_MULTIPLIER))}"
+: "${OBS_CLIENTS:=$((100 * $CLIENTS_MULTIPLIER))}"
 
 : "${CALI_AUTH:=--psk-store cali.psk}"
 
-if [ ! -s ${CF_JAR} ] ; then
+if [ ! -s "${CF_JAR}" ] ; then
+   echo "search for ${CF_JAR}"
 # search for given version
    CF_JAR_TEST=`find -name ${CF_JAR} | head -n 1`
    if  [ -z "${CF_JAR_TEST}" ] ; then
@@ -164,15 +175,17 @@ if [ ! -s ${CF_JAR} ] ; then
    fi
    if  [ -n "${CF_JAR_TEST}" ] ; then
       CF_JAR=${CF_JAR_TEST}
-  fi
+   fi
 fi
 
-if [ ! -s ${CF_JAR} ] ; then
+if [ ! -s "${CF_JAR}" ] ; then
+   echo "search for ${CF_JAR_FIND}"
 # search for alternative available version
-   CF_JAR_TEST=`find -name ${CF_JAR_FIND} ! -name "*sources.jar" | head -n 1`
+   CF_JAR_TEST=`find -name "${CF_JAR_FIND}" ! -name "*sources.jar" | sort -r | head -n 1`
    if  [ -z "${CF_JAR_TEST}" ] ; then
-     CF_JAR_TEST=`find .. -name ${CF_JAR_FIND} ! -name "*sources.jar" | head -n 1`
+     CF_JAR_TEST=`find .. -name "${CF_JAR_FIND}" ! -name "*sources.jar" | sort -r | head -n 1`
    fi
+   echo "found ${CF_JAR_TEST}"
    if  [ -n "${CF_JAR_TEST}" ] ; then
       echo "Found different version."
       echo "Using   ${CF_JAR_TEST}"
@@ -181,7 +194,7 @@ if [ ! -s ${CF_JAR} ] ; then
   fi
 fi
 
-if [ ! -s ${CF_JAR} ] ; then
+if [ ! -s "${CF_JAR}" ] ; then
    echo "Missing ${CF_JAR}"
    exit -1
 fi
@@ -226,31 +239,40 @@ benchmark()
 
 benchmark_all()
 {
-   if [ ${USE_REQUEST} -eq 1 ] ; then
 # POST
-      if [ ${USE_CON} -ne 0 ] ; then
-         if [ ${USE_LARGE_BLOCK1} -ne 0 ] ; then
-            benchmark_udp "benchmark?rlen=${PAYLOAD}" --clients ${UDP_CLIENTS} --requests ${REQS_LARGE} ${USE_NONESTOP} --payload-random ${PAYLOAD_LARGE} --blocksize 64
+   if [ ${USE_REQUEST} -eq 1 ] ; then
+#    Large Payload
+      if [ ${USE_LARGE_BLOCK1} -ne 0 ] ; then
+         if [ ${USE_CON} -eq 1 ] || [ ${USE_CON} -eq 3 ] ; then
+            benchmark_udp "${RESOURCE_PATH}?rlen=${PAYLOAD}" --clients ${UDP_CLIENTS} --requests ${REQS_LARGE} ${USE_NONESTOP} --payload-random ${PAYLOAD_LARGE} --blocksize 64
          fi
-         benchmark_udp "benchmark?rlen=${PAYLOAD}" --clients ${UDP_CLIENTS} --requests ${REQS} ${USE_NONESTOP} ${USE_NSTART}
+         if [ ${USE_NON} -ne 0 ] ; then
+            benchmark_udp "${RESOURCE_PATH}?rlen=${PAYLOAD}" --clients ${UDP_CLIENTS} --non --requests ${REQS_LARGE} ${USE_NONESTOP} --payload-random ${PAYLOAD_LARGE} --blocksize 64
+         fi
+         benchmark_tcp "${RESOURCE_PATH}?rlen=${PAYLOAD}" --clients ${TCP_CLIENTS} --requests ${REQS_LARGE} ${USE_NONESTOP} --payload-random ${PAYLOAD_LARGE} --bertblocks 4
+      fi
+
+#    Small Payload
+      if [ ${USE_CON} -eq 1 ] || [ ${USE_CON} -eq 3 ] ; then
+         benchmark_udp "${RESOURCE_PATH}?rlen=${PAYLOAD}" --clients ${UDP_CLIENTS} --requests ${REQS} ${USE_NONESTOP} ${USE_NSTART} --payload-random ${PAYLOAD}
       fi
 
       if [ ${USE_NON} -ne 0 ] ; then
-         if [ ${USE_LARGE_BLOCK1} -ne 0 ] ; then
-            benchmark_udp "benchmark?rlen=${PAYLOAD}" --clients ${UDP_CLIENTS} --non --requests ${REQS_LARGE} ${USE_NONESTOP} --payload-random ${PAYLOAD_LARGE} --blocksize 64
-         fi
-         benchmark_udp "benchmark?rlen=${PAYLOAD}" --clients ${UDP_CLIENTS} --non --requests ${REQS} ${USE_NONESTOP} ${USE_NSTART}
+         benchmark_udp "${RESOURCE_PATH}?rlen=${PAYLOAD}" --clients ${UDP_CLIENTS} --non --requests ${REQS} ${USE_NONESTOP} ${USE_NSTART} --payload-random ${PAYLOAD}
       fi
+      benchmark_tcp "${RESOURCE_PATH}?rlen=${PAYLOAD}" --clients ${TCP_CLIENTS} --requests ${REQS} ${USE_NONESTOP} --payload-random ${PAYLOAD}
 
-      if [ ${USE_LARGE_BLOCK1} -ne 0 ] ; then
-         benchmark_tcp "benchmark?rlen=${PAYLOAD}" --clients ${TCP_CLIENTS} --requests ${REQS_LARGE} ${USE_NONESTOP} --payload-random ${PAYLOAD_LARGE} --bertblocks 4
-      fi
-      benchmark_tcp "benchmark?rlen=${PAYLOAD}" --clients ${TCP_CLIENTS} --requests ${REQS} ${USE_NONESTOP}
-
-      if [ ${USE_CON} -eq 2 ] ; then
 # POST separate response
-         benchmark_udp "benchmark?rlen=${PAYLOAD}&ack" --clients ${UDP_CLIENTS} --requests ${REQS} ${USE_NONESTOP} ${USE_NSTART}
+      if [ ${USE_CON} -eq 2 ] || [ ${USE_CON} -eq 3 ] ; then
+         benchmark_udp "${RESOURCE_PATH}?rlen=${PAYLOAD}&ack" --clients ${UDP_CLIENTS} --requests ${REQS} ${USE_NONESTOP} ${USE_NSTART} --payload-random ${PAYLOAD}
       fi
+   fi
+
+   if [ ${USE_OBSERVE} -eq 1 ] ; then
+      benchmark_udp "${RESOURCE_PATH}?rlen=${PAYLOAD}" --clients ${OBS_CLIENTS} --requests 1 ${USE_NONESTOP} --notifies ${NOTIFIES} --reregister 25 --register 75 
+      benchmark_udp "${RESOURCE_PATH}?rlen=${PAYLOAD}" --clients ${OBS_CLIENTS} --requests 1 ${USE_NONESTOP} --notifies ${NOTIFIES} --reregister 25 --register 75 --cancel-proactive
+      benchmark_tcp "${RESOURCE_PATH}?rlen=${PAYLOAD}" --clients ${OBS_CLIENTS} --requests 1 ${USE_NONESTOP} --notifies ${NOTIFIES} --reregister 25 --register 75
+      benchmark_tcp "${RESOURCE_PATH}?rlen=${PAYLOAD}" --clients ${OBS_CLIENTS} --requests 1 ${USE_NONESTOP} --notifies ${NOTIFIES} --reregister 25 --register 75 --cancel-proactive
    fi
 
    if [ ${USE_REVERSE} -eq 1 ] ; then
@@ -264,16 +286,16 @@ benchmark_all()
       benchmark_tcp "reverse-request?req=${REQS_EXTRA}&res=feed-CON&rlen=${PAYLOAD}" --clients ${TCP_CLIENTS} --requests 2 ${USE_NONESTOP} --reverse ${REV_REQS}
    fi
 
-   if [ ${USE_OBSERVE} -eq 1 ] ; then
-# observe CON
+   if [ ${USE_REVERSE_OBSERVE} -eq 1 ] ; then
+# reverse observe CON
       if [ ${USE_CON} -ne 0 ] ; then
-          benchmark_udp "reverse-observe?obs=25000&res=feed-CON&rlen=${PAYLOAD_MEDIUM}" --clients ${OBS_CLIENTS} --requests 1 ${USE_NONESTOP} --reverse ${NOTIFIES} --min -200 --max 200 --blocksize 64
+          benchmark_udp "reverse-observe?obs=25000&res=feed-CON&rlen=${PAYLOAD_MEDIUM}" --clients ${OBS_CLIENTS} --requests 1 ${USE_NONESTOP} --reverse ${REV_NOTIFIES} --min -200 --max 200 --blocksize 64
       fi
-# observe NON
+# reverse observe NON
       if [ ${USE_CON} -ne 0 ] ; then
-         benchmark_udp "reverse-observe?obs=25000&res=feed-NON&rlen=${PAYLOAD_MEDIUM}" --clients ${OBS_CLIENTS} --requests 1 ${USE_NONESTOP} --reverse ${NOTIFIES} --min -200 --max 200 --blocksize 64
+         benchmark_udp "reverse-observe?obs=25000&res=feed-NON&rlen=${PAYLOAD_MEDIUM}" --clients ${OBS_CLIENTS} --requests 1 ${USE_NONESTOP} --reverse ${REV_NOTIFIES} --min -200 --max 200 --blocksize 64
       fi
-      benchmark_tcp "reverse-observe?obs=25000&res=feed-CON&rlen=${PAYLOAD_MEDIUM}" --clients ${OBS_CLIENTS} --requests 1 ${USE_NONESTOP} --reverse ${NOTIFIES} --min -200 --max 200 --blocksize 64
+      benchmark_tcp "reverse-observe?obs=25000&res=feed-CON&rlen=${PAYLOAD_MEDIUM}" --clients ${OBS_CLIENTS} --requests 1 ${USE_NONESTOP} --reverse ${REV_NOTIFIES} --min -200 --max 200 --blocksize 64
    fi
 }
 
@@ -285,7 +307,7 @@ benchmark_dtls_handshake()
       i=0
 
       while [ $i -lt $1 ] ; do
-         java ${CF_OPT} -cp ${CF_JAR} ${CF_EXEC} $2 "coaps://${CF_HOST}:${SECURE_PORT}/benchmark?rlen=${PAYLOAD}" --clients ${UDP_CLIENTS} --requests 10 ${USE_NONESTOP}
+         java ${CF_OPT} -cp ${CF_JAR} ${CF_EXEC} $2 "coaps://${CF_HOST}:${SECURE_PORT}/${RESOURCE_PATH}?rlen=${PAYLOAD}" --clients ${UDP_CLIENTS} --requests 10 ${USE_NONESTOP}
          if [ ! $? -eq 0 ] ; then exit $?; fi
          sleep 2
          i=$(($i + 1))
@@ -341,12 +363,12 @@ proxy()
          if [ ! $? -eq 0 ] ; then exit $?; fi
          sleep 5
       fi
-      java ${CF_OPT} -cp ${CF_JAR} ${CF_EXEC} "coap://${CF_HOST}:${PLAIN_PORT}/benchmark?rlen=${PAYLOAD}" --clients ${UDP_CLIENTS} --requests ${REQS} --proxy "localhost:5683:coap"
+      java ${CF_OPT} -cp ${CF_JAR} ${CF_EXEC} "coap://${CF_HOST}:${PLAIN_PORT}/${RESOURCE_PATH}?rlen=${PAYLOAD}" --clients ${UDP_CLIENTS} --requests ${REQS} --proxy "localhost:5683:coap"
       if [ ! $? -eq 0 ] ; then exit $?; fi
       sleep 5
    fi 
    if [ ${USE_SECURE} -ne 0 ] ; then
-      java ${CF_OPT} -cp ${CF_JAR} ${CF_EXEC} "coap://${CF_HOST}:${SECURE_PORT}/benchmark?rlen=${PAYLOAD}" --clients ${UDP_CLIENTS} --requests ${REQS} --proxy "localhost:5683:coaps"
+      java ${CF_OPT} -cp ${CF_JAR} ${CF_EXEC} "coap://${CF_HOST}:${SECURE_PORT}/${RESOURCE_PATH}?rlen=${PAYLOAD}" --clients ${UDP_CLIENTS} --requests ${REQS} --proxy "localhost:5683:coaps"
       if [ ! $? -eq 0 ] ; then exit $?; fi
       sleep 5
    fi 
